k8s/infra/bucketclaim.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tempostack
  labels:
    name: tempostack
